Add introduction and subtitle to turb.tex.

--- a/turb.tex
+++ b/turb.tex
@@ -7,11 +7,32 @@
 \chapter{Upper-tropospheric low Richardson number in tropical cyclones: Sensitivity to cyclone intensity and the diurnal cycle}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
+\textbf{Published in Journal of the Atmospheric Sciences:}
+
+\noindent Duran, P., and J. Molinari, 2016: Upper-tropospheric low Richardson number in tropical cyclones: Sensitivity to cyclone intensity and the diurnal cycle. \textit{J. Atmos. Sci.}, \textbf{73}, 545–554.
+
+
 %---------------------------------------------------------------------------------------%
 \section{Introduction}
 %---------------------------------------------------------------------------------------%
 
-In addition to introduction in the published paper, tie this in to the Patricia and CM1 results...
+In addition to its importance in the theoretical models of TCs discussed in Section \ref{intro}, turbulence associated with TCs can considerably disrupt aviation traffic.
+Although severe turbulence is most often observed within 100 km of active convection \citep{Laneetal2012}, widespread turbulence also has been reported in the upper-level outflow of mesoscale convective systems several hundred kilometers away from convection \citep{TrierSharman2009}.
+Possible causes of this turbulence include breaking gravity waves \citep{Laneetal2012} and strong vertical wind shear associated with MCS outflow \citep{Zovko-RajakLane2014}.
+Although turbulence near midlatitude MCSs has been studied extensively, few papers have addressed turbulence near TCs.
+
+\cite{Molinarietal2014} examined bulk Richardson number ($R_b$) in TCs using NOAA Gulfstream-IV (G-IV) dropsondes.
+They found a steady increase in the frequency of low--Richardson number layers above the 9-km level to a peak near 13 km.
+These layers most often coexisted with low static stability in the upper troposphere, consistent with the in-cloud heating and cloud-top cooling given by \cite{Buetal2014}.
+Because the G-IV dropsonde data rarely extend above the 13-km height, they could not measure the full cirrus canopy, which can reach 16 km \cite{Waco1970}.
+The rawinsondes used in the present study provide high-resolution data well into the stratosphere.
+In addition, they sample twice daily and observe a wider range of storm intensity than the G-IV dropsondes.
+The rawinsonde data will allow the following questions to be addressed:
+\begin{itemize}
+   \item What is the radial–vertical structure of the Richardson number above 13 km?
+   \item How does upper-tropospheric Richardson number vary with storm intensity?
+   \item How does upper-tropospheric Richardson number change with time of day?
+\end{itemize}
 
 %---------------------------------------------------------------------------------------%
 \section{Data and methods}
