Add all references for Introduction section up to now.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -92,6 +92,15 @@ title={Office of {N}aval {R}esearch {T}ropical {C}yclone {I}ntensity ({TCI}) 201
 year={2016},
 DOI={10.5065/D6KW5D8M}}
 
+@article{BisterEmanuel1998,
+author = {Bister, M. and K. A. Emanuel},
+year = {1998},
+title = {{Dissipative heating and hurricane intensity.}},
+journal = {Meteor. Atmos. Phys.},
+volume = {65},
+pages = {233-240}
+}
+
 @article{Blacketal2017,
 author = {Black, P. and L. Harrison and M. Beaubien and R. Bluth and R. Woods and A. Penny and R. W. Smith and J. D. Doyle},
 title = {{High definition sounding system (HDSS) for atmospheric profiling}},
@@ -152,6 +161,15 @@ title = {Influence of cloud-radiative forcing on tropical cyclone structure},
 journal = JAS,
 volume = {71},
 pages = {1644-1622}
+}
+
+@article{ChenGopalakrishnan2015,
+author = {Chen, H. and S. G. Gopalakrishnan},
+year = {2015},
+title = {{A study of the asymmetric rapid intensification of Hurricane Earl (2010) using the HWRF system}},
+journal = JAS,
+volume = {72},
+pages = {531-549}
 }
 
 @article{ChenZhang2013,
@@ -265,6 +283,24 @@ volume = {69},
 pages = {988-996}
 }
 
+@article{Emanueletal2013,
+author = {Emanuel, K. A. and S. Solomon and D. Folini and S. Davis and C. Cagnazzo},
+year = {2013},
+title = {{Influence of tropical tropopause layer cooling on Atlantic hurricane activity}},
+journal = JCLI,
+volume = {26},
+pages = {2288-2301}
+}
+
+@article{Ferreiraetal2016,
+author = {Ferreira, A. P. and J. M. Castanheira and L. Gimeno},
+year = {2016},
+title = {{Water vapour stratification and dynamical warming behind the sharpness of the Earth’s midlatitude tropopause}},
+journal = QJRMS,
+volume = {142},
+pages = {957-970}
+}
+
 @article{Garrettetal2005,
 author = {Garrett, T. J. and B. C. Navarro and C. H. Twohy and E. J. Jensen and D. G. Baumgardner and P. T. Bui and H. Gerber and R. L Herman and A. J. Heymsfield and P. Lawson and P. Minnis and L. Nguyen and M. Poellot and S. K. Pope and F. P. J. Valero and E. M. Weinstock},
 year = {2005},
@@ -283,6 +319,15 @@ volume = {18},
 pages = {293-310}
 }
 
+@article{Griseetal2010,
+author = {Grise, K. M. and D. W. J. Thompson and T. Birner},
+year = {2010},
+title = {{A global survey of static stability in the stratosphere and upper troposphere}},
+journal = JCLI,
+volume = {23},
+pages = {2275-2292}
+}
+
 @article{Guimondetal2010,
 author = {Guimond, S. R. and G.M. Heymsfield and F. J. Turk},
 year = {2010},
@@ -290,6 +335,42 @@ title = {Multiscale observations of Hurricane Dennis (2005): The effects of hot 
 journal = JAS,
 volume = {67},
 number = {633-653}
+}
+
+@article{Halversonetal2006,
+author = {Halverson, J. B. and J. Simpson and G. Heymsfield and H. Pierce and T. Hock and L. Ritchie},
+year = {2006},
+title = {{Warm core structure of Hurricane Erin diagnosed from high altitude dropsondes during CAMEX-4}},
+journal = JAS,
+volume = {63},
+pages = {309-324}
+}
+
+@article{Haurwitz1935,
+author = {Haurwitz, B.},
+year = {1935},
+title = {{The height of tropical cyclones and of the ‘‘eye’’ of the storm}},
+journal = MWR,
+volume = {63},
+pages = {45-49}
+}
+
+@article{HawkinsImbembo1976,
+author = {Hawkins, H. F. and S. M. Imbembo},
+year = {1976},
+title = {{The structure of a small, intense hurricane---Inez 1966}},
+journal = MWR,
+volume = {104},
+pages = {418-442}
+}
+
+@article{HawkinsRubsam1968,
+author = {Hawkins, H. F. and D. T. Rubsam},
+year = {1968},
+title = {{Hurricane Hilda, 1964. II. Structure and budgets of the hurricane on October 1, 1964}},
+journal = MWR,
+volume = {96},
+pages = {617-636}
 }
 
 @article{HockFranklin1999,
@@ -387,6 +468,24 @@ volume = {61},
 pages = {2919-2927}
 }
 
+@article{Laneetal2012,
+author = {Lane, T. P. and R. D. Sharman and S. B. Trier and R. G. Fovell and J. K. Williams},
+year = {2012},
+title = {{Recent advances in the understanding of near-cloud turbulence}},
+journal = BAMS,
+volume = {93},
+pages = {499-516}
+}
+
+@article{LaSeurandHawkins1963,
+author = {La Seur, N. E. and H. F. Hawkins},
+year = {1963},
+title = {{An analysis of Hurricane Cleo (1958) based on data from research reconnaissance aircraft}},
+journal = MWR,
+volume = {91},
+pages = {694-709}
+}
+
 @article{Lazzaraetal1999,
 author = {Lazzara, M. A. and J. M. Benson and R. J. Fox and D. J. Laitsch and J. P. Rueden and D. A. Santek and T. M. Whittaker and J. T. Young},
 year = {1999},
@@ -412,6 +511,15 @@ title = {Research using high (and higher) resolution radiosonde data},
 journal = {{Eos, Trans. Amer. Geophys. Union}},
 volume = {93},
 number = {337-344}
+}
+
+@article{Malkus1958,
+author = {Malkus, J. S.},
+year = {1958},
+title = {{On the structure and maintenance of the mature hurricane eye}},
+journal = {{J. Meteor.}},
+volume = {15},
+pages = {337-349}
 }
 
 @article{MarkowskiBryan2016,
@@ -459,6 +567,15 @@ volume = {72},
 pages = {551-571}
 }
 
+@article{PendergrassWilloughby1979,
+author = {Pendergrass, A. G. and H. E. Willoughby},
+year = {2009},
+title = {{Diabatically induced secondary flows in tropical cyclones. Part I: Quasi-steady forcing}},
+journal = MWR,
+volume = {137},
+pages = {805-821}
+}
+
 @article{Penn1965,
 author = {Penn, S.},
 year = {1965},
@@ -466,6 +583,24 @@ title = {Ozone and temperature structure in a hurricane},
 journal = {{J. Appl. Meteor.}},
 volume = {4},
 number = {212-216}
+}
+
+@article{Penn1966,
+author = {Penn, S.},
+year = {1966},
+title = {{Temperature and ozone variations near tropopause level over Hurricane Isbell October 1964}},
+journal = {{J. Appl. Meteor.}},
+volume = {5},
+pages = {407-410}
+}
+
+@article{Randeletal2007,
+author = {Randel, W. J. and F. Wu and P. Forser},
+year = {2007},
+title = {{The extratropical tropopause inversion layer: Global observations with GPS data, and a radiative forcing mechanism}},
+journal = JAS,
+volume = {64},
+pages = {4489-4496}
 }
 
 @article{RobinsonSherwood2006,
@@ -540,6 +675,24 @@ volume = {60},
 pages = {1847-1856}
 }
 
+@article{Smith1980,
+author = {Smith, R. K.},
+year = {1980},
+title = {{Tropical cyclone eye dynamics}},
+journal = JAS,
+volume = {37},
+pages = {1227-1232}
+}
+
+@article{SternNolan2012,
+author = {Stern, D. P. and D. S. Nolan},
+year = {2012},
+title = {{On the height of the warm core in tropical cyclones}},
+journal = JAS,
+volume = {69},
+pages = {1657-1679}
+}
+
 @article{SternZhang2013,
 author = {Stern, D. P. and F. Zhang},
 year = {2013},
@@ -559,7 +712,7 @@ number = {2},
 pages = {519-542}
 }
 
-@article{TrierSharman,
+@article{TrierSharman2009,
 author = {Trier, S. B. and R. D. Sharman},
 year = {2009},
 title = {{Convection-permitting simulations of the environment supporting widespread turbulence within the upper-level outflow of a mesoscale convective system}},
@@ -584,6 +737,33 @@ title = {{Temperatures and turbulence at tropopause levels over Hurricane Beulah
 journal = MWR,
 volume = {98},
 pages = {749-755}
+}
+
+@article{Wangetal2014,
+author = {Wang, S. and S. J. Camargo and A. H. Sobel and L. M. Polvani},
+year = {2014},
+title = {{Impact of the tropopause temperature on the intensity of tropical cyclones: An idealized study using a mesoscale model}},
+journal = JAS,
+volume = {71},
+pages = {4333-4348}
+}
+
+@article{Willoughby1979,
+author = {Willoughby, H. E.},
+year = {1979},
+title = {{Forced secondary circulations in hurricanes}},
+journal = JGR,
+volume = {84},
+pages = {3173-3183}
+}
+
+@article{Wirth2003,
+author = {Wirth, V.},
+year = {2003},
+title = {{Static stability in the extratropical tropopause region}},
+journal = JAS,
+volume = {60},
+pages = {1395-1409}
 }
 
 @article{WMO1957,
@@ -627,3 +807,11 @@ volume = {39},
 number = {L02806}
 }
 
+@article{Zovko-RajakLane2014,
+author = {Zovko-Rajak, D. and T. P. Lane},
+year = {2014},
+title = {{The generation of near-cloud turbulence in idealized simulations}},
+journal = JAS,
+volume = {71},
+pages = {2430-2450}
+}
