--- a/ack.tex
+++ b/ack.tex
@@ -8,9 +8,9 @@
 
 %---------------------------------------------------------------------------------------%
 
-\indent This dissertation is the fulfillment of a childhood dream that would not have come true without the selfless dedication of countless people.
+\indent \indent This dissertation is the fulfillment of a childhood dream that would not have come true without the selfless dedication of countless people.
 
-First I must thank my advisor, John Molinari, for his unswerving kindness, humility, and patience over these past six years.  
+First I would like to thank my advisor, John Molinari, for his unswerving kindness, humility, and patience over these past six years.  
 Former students have described him as a "brilliant scientist and an even better man," an assessment with which I wholeheartedly concur.  
 I could not have asked for a better mentor, and am so grateful for the opportunities he has given to me.
 
@@ -23,10 +23,13 @@ Nowhere was their dedication to students more evident than in their outstanding 
 
 I also owe a tremendous debt to Steven Lazarus and Michael Splitt of the Florida Institute of Technology, whose selfless investment in me as an undergraduate played a critical role in my academic development, and prepared me for PhD-level research and course work.
 
-I am grateful for the support and friendship of all of the DAES graduate students, particularly Travis Elless, Stephanie Stevenson, Oscar Chimborazo, Sarah Ditchek, Matthew Vaughan, and Steven Fuhrman.  
+I am grateful for the support and friendship of all of the DAES graduate students, particularly Travis Elless, Stephanie Stevenson, Oscar Chimborazo, Steven Fuhrman, Ahmed Shaaban, Sarah Ditchek, Matthew Vaughan, Michael Fischer, Hannah Attard, Josh Alland, Chen Yuan-Ming, and Connor Nelson.  
 Their friendship and encouragement over these years has meant a lot to me.
 I owe a special thanks to Chip Helms for not only being a fantastic friend, but for innumerable stimulating conversations, and for introducing me to so many people in the tropical meteorology community.  
 Thanks also to research associate Dave Vollaro, whose guidance during my first year of graduate school greatly accelerated my development as a programmer, and whose baseball knowledge far surpassed mine.
+
+I owe a special thanks to Richard Schneible of the College of Business for showing me that it is possible to be both a committed husband and father and a successful academic.
+Likewise, my siblings Andy, LeAna, and Matthew and their spouses Lisa, Jake, and Melissa are some of the best role models a youngest child could ask for.
 
 Last and most importantly, I thank my fianc\'ee, Erika Navarro, for her constant love and support, and my parents for the innumerable sacrifices that they have made on my behalf.
 Their gentle encouragement always pushed me to achieve my greatest potential, and their belief in me provided indispensible sustenance during times of hardship. 
