Add 2nd paragraph of Patricia paper intro to intro.tex, along with its references.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -208,6 +208,15 @@ volume = {16},
 number = {4837-4847}
 }
 
+@article{Davisetal2014,
+author = {Davis, C. A. and D. A. Ahijevych and J. A. Haggerty and M. J. Mahoney},
+year = {2014},
+title = {{Observations of temperature in the upper troposphere and lower stratosphere of tropical weather disturbances}},
+journal = JAS,
+volume = {71},
+pages = {1593-1608}
+}
+
 @article{DoyleTCI,
 author = {Doyle, James D. and Moskaitis, J. and Feldmeier, J and Ferek, R. and Beaubien, M. and Bell, M. and Cecil, D. and Creasey, R. and Duran, P. and Elsberry, R. and Komaromi, W. and Molinari, J. and Ryglici, D. and Stern, D. and Velden, C. and Wang, X. and Allen, T. and Barrett, B. and Black, P. and Dunion, J. and Emanuel, K. and Harr, P. and Harrison L. and Hendricks, E. and Herndon, D. and Jeffries, W. and Majumdar, S.J. and Moore, J. and Pu, Z. and Rogers, R. and Sanabia, E. and Tripoli, G. and Zhang, D.-L.},
 title = {{A view of tropical cyclones from above: The Tropical Cyclone Intensity (TCI) Experiment}},
@@ -382,6 +391,15 @@ volume = {80},
 pages = {407-420}
 }
 
+@article{Holtonetal1995,
+author = {Holton, J. R. and P. H. Haynes and M. E. McIntyre and A. R. Douglass and R. B. Hood and L. Pfister},
+year = {1995},
+title = {{Stratosphere-troposphere exchange}},
+journal = {{Rev. Geophys.}},
+volume = {33},
+pages = {403-439}
+}
+
 @article{Iacono,
 author = {Iacono, M. J. and J. S. Delamere and E. J. Mlawer and M. W. Shephard and S. A. Clough and W. D. Collins},
 year = {2008},
@@ -477,7 +495,7 @@ volume = {93},
 pages = {499-516}
 }
 
-@article{LaSeurandHawkins1963,
+@article{LaSeurHawkins1963,
 author = {La Seur, N. E. and H. F. Hawkins},
 year = {1963},
 title = {{An analysis of Hurricane Cleo (1958) based on data from research reconnaissance aircraft}},
@@ -558,6 +576,15 @@ volume = {67},
 pages = {274-284}
 }
 
+@article{Moteetal1996,
+author = {Mote, P. W. and Coauthors},
+year = {1996},
+title = {{An atmospheric tape recorder: The imprint of tropical tropopause temperature on stratospheric water vapor}},
+journal = JGR,
+volume = {101},
+pages = {3989-4006}
+}
+
 @article{OhnoSatoh2015,
 author = {Ohno, T. and M. Satoh},
 year = {2015},
@@ -567,7 +594,7 @@ volume = {72},
 pages = {551-571}
 }
 
-@article{PendergrassWilloughby1979,
+@article{PendergrassWilloughby2009,
 author = {Pendergrass, A. G. and H. E. Willoughby},
 year = {2009},
 title = {{Diabatically induced secondary flows in tropical cyclones. Part I: Quasi-steady forcing}},
