--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,13 @@
 \chapter{Introduction}
 \label{intro}
 
-\indent \indent Tropopause temperature is an important parameter in theoretical models of TC structure and intensity.
+\indent \indent The cold-point tropopause is defined as the level of minimum temperature in a sounding (Highwood and Hoskins 1998).
+This tropopause definition is widely used in the tropics because the cold-point temperature influences the exchange of ozone and water vapor between the troposphere and stratosphere \citep{Moteetal1996}, which has important climatological implications \citep{Holtonetal1995}.
+Although few papers have analyzed the effect of tropical cyclones (TCs) on the tropopause, radar observations suggest that TCs can enhance troposphere--stratosphere exchange through deep convection and turbulent mixing \citep{Dasetal2008}.
+In addition, \citep{Davisetal2014} noted that convection within intensifying tropical
+disturbances can penetrate up to or above the cold-point tropopause, acting to decrease its temperature.
+
+Tropopause temperature is an important parameter in theoretical models of TC structure and intensity.
 \cite{EmanuelRotunno2011} expressed the maximum gradient wind speed at the top of the TC boundary layer as a function of upper-level outflow temperature.
 They argued that the outflow-layer stratification is determined by a requirement that the Richardson number remains near a critical value for turbulence.
 \cite{Emanuel2012} further showed that vortex amplification is a function of the radial gradient of outflow temperature, which is determined by small-scale turbulent mixing.
@@ -32,7 +38,7 @@ Likewise in Hurricane Beulah (1967), the coldest temperature, -86\textdegree{}C,
 Very near the storm center, the temperature at 16.5-km altitude increased from -86\textdegree{}C to -77\textdegree{}C over a horizontal distance less than 30 km as the aircraft approached the storm center [see Fig. 2 ‘‘Run 2’’ in \cite{Waco1970}].
 This strong inward temperature increase was likely associated with an intense upper-tropospheric warm core within and near Beulah’s eye.
 
-The presence of a warm core in the upper troposphere of hurricanes was documented by a series of studies (\citeauthor{LaSeurHawkins1963} \citeyear{LaSeurandHawkins1963}; \citeauthor{HawkinsRubsam1968} \citeyear{HawkinsRubsam1968}; \citeauthor{HawkinsImbembo1976} \citeyear{HawkinsImbembo1976}) using aircraft observations.
+The presence of a warm core in the upper troposphere of hurricanes was documented by a series of studies (\citeauthor{LaSeurHawkins1963} \citeyear{LaSeurHawkins1963}; \citeauthor{HawkinsRubsam1968} \citeyear{HawkinsRubsam1968}; \citeauthor{HawkinsImbembo1976} \citeyear{HawkinsImbembo1976}) using aircraft observations.
 \citeauthor{HawkinsImbembo1976} (\citeyear{HawkinsImbembo1976}, their Fig. 6) depicted two anomalous warming maxima---one centered near 600 mb (1 mb = 1 hPa) and another centered near 300 mb---in Hurricane Inez (1966).
 The precise location of these warm cores cannot be known with certainty, however, since data were collected at only four levels: 750, 650, 500, and 180 mb.
 The upper-level warm core was recognized at least as early as \cite{Haurwitz1935}, who attributed its formation to subsidence warming.
