Modify ack.tex and add first 8 figures to hs3.tex

--- a/hs3.tex
+++ b/hs3.tex
@@ -35,8 +35,58 @@ Then the static stability structure of a large number of TCs is analyzed using t
 %---------------------------------------------------------------------------------------%
 
 %FIGURE 1%
-%\begin{figure*}[ht]
-%\centerline{\includegraphics[width=39pc]{figures/}}
-%\caption{}
-%\label{fig:}
-%\end{figure*}
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/nadine-skewt.png}}
+   \caption{(left) Infrared brightness temperature (\textdegree{}C) image of Hurricane Nadine at 2245 UTC 14 September 2012. Magenta, green, and blue stars represent dropsonde deployment locations corresponding to the three temperature soundings shown in the skew $T$--log$p$ diagram (right).}
+\label{fig:nadine-skewt}
+\end{figure*}
+
+%FIGURE 2%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/nadine-n2}}
+\caption{Infrared brightness temperature (\textdegree{}C) images of Hurricane Nadine at (top left) 2315 UTC 14 September 2012 and (bottom left) 0015 UTC 15 September 2015. Digits represent dropsonde deployment locations. (right panels) Vertical cross sections of the squared Brunt-V{\"a}is{\"a}l{\"a} frequency ($N^2$; 10\textsuperscript{-4} s\textsuperscript{-2}) constructed using the dropsondes depicted in the left panels. Digits along the bottom of the cross-sections correspond to the dropsonde locations indicated in the left panels.}
+\label{fig:nadine-n2}
+\end{figure*}
+
+%FIGURE 3%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/skewt-examples.png}}
+\caption{Skew $T$--log $p$ diagrams depicting examples of three tropopause structure classifications: (top left) smooth tropopause, (top right) sharp tropopause, (bottom left) multiple tropopause.}
+\label{fig:skewt-examples}
+\end{figure*}
+
+%FIGURE 4%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=27pc]{figures/tb_cdf_10Cbins_0-500km.png}}
+\caption{Cumulative distributions of infrared brightness temperature (\textdegree{}C) for three tropopause structure classifications: (red) smooth tropopause, (orange) sharp tropopause, and (blue) multiple tropopause.}
+\label{fig:cdf}
+\end{figure*}
+
+%FIGURE 5%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=27pc]{figures/stationmap+stormlocations.png}}
+\caption{(top) Map of the number of rawinsondes deployed within 1000 km of tropical cyclones by station locations. (bottom) The locations of the center positions of (blue stars) tropical depressions, (orange stars) tropical storms, and (red stars) hurricanes at times when rawinsonde observations were deployed.}
+\label{fig:maps}
+\end{figure*}
+
+%FIGURE 6%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/sondelocs-scatterplot.png}}
+\caption{Rawinsonde deployment locations relative to a composite TC center for (blue) tropical depressions, (orange) tropical storms, and (red) hurricanes. Range rings are plotted every 100 km, starting at 100 km and ending at 1000 km.}
+\label{fig:scatterplot}
+\end{figure*}
+
+%FIGURE 7%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/t+dtdz+d2tdz2-intensity-montage.png}}
+\caption{Composite mean vertical profiles of (left) temperature (\textdegree{}C), (middle) the vertical temperature gradient (\textdegree{}C km\textsuperscript{-1}), and (right) the second derivative of temperature with respect to height (\textdegree{}C km\textsuperscript{-2}) composited about the cold-point tropopause height for (blue) tropical depressions and tropical storms and (red) hurricanes.}
+\label{fig:tline-int}
+\end{figure*}
+
+%FIGURE 8%
+\begin{figure*}[ht]
+\centerline{\includegraphics[width=39pc]{figures/t+dtdz+d2tdz2-irbt-montage.png}}
+\caption{As in Fig. \ref{fig:tline-int} but for rawinsondes deployed in regions of brightness temperature (magenta) colder than -50\textdegree{}C, (red) between -30 and -50\textdegree{}C, and (blue) warmer than -30\textdegree{}C.}
+\label{fig:tline-ir}
+\end{figure*}
+
