Start writing Data & Methods section in hs3.tex.

--- a/hs3.tex
+++ b/hs3.tex
@@ -13,12 +13,27 @@
 
 The preceding two chapters documented the static stability evolution within extraordinarily intense TCs from both an observational and numerical modeling perspective.
 The question remains, however, whether these results can be generalized to a large number of TCs at a range of intensities.
-This chapter first documents the presence of large horizontal gradients of static stability observed within category one Hurricane Nadine (2012) during the NASA Hurricane and Severe Storm Sentinel (HS3).
+This chapter first documents the presence of large horizontal gradients of static stability observed within category one Hurricane Nadine (2012) during the NASA Hurricane and Severe Storm Sentinel (HS3; \citeauthor{Braunetal2016} \citeyear{Braunetal2016}).
 Then the static stability structure of a large number of TCs is analyzed using the same rawinsonde dataset as that employed by \cite{DuranMolinari2016}.
 
 %---------------------------------------------------------------------------------------%
 \section{Data and methods}
 %---------------------------------------------------------------------------------------%
+Hurricane Nadine (2012) was a long-lived TC in the North Atlantic that was the focus of five research flights conducted by a NASA Global Hawk aicraft during HS3 \citep{Braunetal2016}.
+The second research flight into the storm deployed 70 dropsondes \cite{Young2012} while Nadine intensified from a tropical storm to a category 1 hurricane \cite{Brown2013} on 14 September 2012.
+These dropsondes, deployed from the lower stratosphere, provided full-tropospheric profiles of temperature, humidity, and wind across a broad region of the storm.
+The observations were interpolated to a 100-m vertical grid following \cite{MolinariVolarro2012} and the static stability ($N^2$) was computed following \cite{DuranMolinari2018}.
+A great strength of the HS3 dropsonde dataset is that it provides numerous high-resolution soundings within and around individual TCs within short time periods.
+This strength will be leveraged to analyze the tropopause-layer static stability structure of Nadine as it intensified to hurricane strength.
+
+Although HS3 deployed 965 dropsondes within 1000 km of TCs over three years, providing unprecended dropsonde coverage in TCs, these dropsondes sampled only seven different storms.
+To get a more general sense of the tropopause-layer structure of TCs, the large rawinsonde dataset of \cite{DuranMolinari2016} will be employed.
+This dataset includes 11735 rawinsondes that were launched within 1000 km of TCs between the years 1998-2011\footnote{Note that fewer rawinsondes were included in the \cite{DuranMolinari2016} study because the Richardson number, which was the focus of that paper, requires both winds and thermodynamic observations. Many soundings were excluded from that analysis due to missing wind observations in the upper troposphere.}.
+After imposing a requirement that the cold-point tropopause be located at or above 14 km, 9318 soundings remained within 1000 km of TCs.
+
+CONSIDER MOVING MAPS AND STORM-CENTERED PLOTS UP TO FIGS. 1-2 IN THIS SECTION.
+
+These rawinsondes 
 
 %---------------------------------------------------------------------------------------%
 \section{Results}
